# modern-cmake-tutorial

./: README.md
executable/: CMakeLists.txt
executable/src/: main.cpp
